// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SyncErrorMessage > should handle retry 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="ring-focus group inline-block css-7nwwrh"
      data-ring-focus-margin="-m-1"
      data-testid="Link"
      href="#/"
    >
      <span
        class="css-170792"
      >
        here
      </span>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render multiple failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="ring-focus group inline-block css-7nwwrh"
      data-ring-focus-margin="-m-1"
      data-testid="Link"
      href="#/"
    >
      <span
        class="css-170792"
      >
        here
      </span>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render one failed network 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="ring-focus group inline-block css-7nwwrh"
      data-ring-focus-margin="-m-1"
      data-testid="Link"
      href="#/"
    >
      <span
        class="css-170792"
      >
        here
      </span>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render two failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      ARK Mainnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="ring-focus group inline-block css-7nwwrh"
      data-ring-focus-margin="-m-1"
      data-testid="Link"
      href="#/"
    >
      <span
        class="css-170792"
      >
        here
      </span>
    </a>
  </span>
   to retry.
</div>
`;
